fix: Tweaks Navbar height and spacing

--- a/src/components/common/Navbar/navbar.module.scss
+++ b/src/components/common/Navbar/navbar.module.scss
@@ -7,6 +7,8 @@
 
   // Default properties
 
+  --fs-navbar-height-mobile                              : 3.5rem;
+
   --fs-navbar-bkg-color                                  : rgb(255 255 255 / 90%);
 
   --fs-navbar-transition-timing                          : var(--fs-transition-timing);
@@ -43,9 +45,16 @@
   position: sticky;
   top: 0;
   z-index: var(--fs-z-index-high);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding: 0;
   box-shadow: var(--fs-navbar-box-shadow);
   transition: top var(--fs-navbar-transition-timing) var(--fs-navbar-transition-function);
+
+  @include media("<notebook") {
+    height: var(--fs-navbar-height-mobile);
+  }
 
   &[data-fs-navbar-scroll="down"] {
     > nav {
@@ -97,10 +106,6 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-
-    [data-fs-button-collapse] {
-      margin-left: calc(-1 * var(--fs-spacing-3));
-    }
 
     [data-fs-button-signin-link] + [data-fs-button-cart] {
       @include media(">=notebook") {
